; ModuleID = '/home/carl/AnghaBench/kphp-kdb/spell/extr_spell-data.c_spell_check.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/spell/extr_spell-data.c_spell_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@spell_check.buff = internal global [16384 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [19 x i8] c"Before filter: %s\0A\00", align 1
@re_email = common dso_local global i32 0, align 4
@re_url = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"After filter: %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"[%d] check_word: %.*s\0A\00", align 1
@check_word_stat = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spell_check(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @memset(i32* %12, i32 0, i32 8)
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %26, label %16

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @dyn_mark(i32 %17)
  %19 = load i8*, i8** %4, align 8
  %20 = call i64 @strlen(i8* %19)
  %21 = add nsw i64 %20, 1
  %22 = call i8* @zmalloc(i64 %21)
  store i8* %22, i8** %7, align 8
  %23 = load i8*, i8** %7, align 8
  %24 = load i8*, i8** %4, align 8
  %25 = call i32 @strcpy(i8* %23, i8* %24)
  br label %28

26:                                               ; preds = %3
  %27 = load i8*, i8** %4, align 8
  store i8* %27, i8** %7, align 8
  br label %28

28:                                               ; preds = %26, %16
  %29 = load i8*, i8** %7, align 8
  %30 = call i32 (i32, i8*, ...) @vkprintf(i32 3, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %29)
  %31 = load i8*, i8** %7, align 8
  %32 = call i32 @filter_re(i8* %31, i32* @re_email)
  %33 = load i8*, i8** %7, align 8
  %34 = call i32 @filter_re(i8* %33, i32* @re_url)
  %35 = load i8*, i8** %7, align 8
  %36 = call i32 (i32, i8*, ...) @vkprintf(i32 3, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %35)
  br label %37

37:                                               ; preds = %111, %56, %28
  %38 = load i8*, i8** %7, align 8
  %39 = load i8, i8* %38, align 1
  %40 = icmp ne i8 %39, 0
  br i1 %40, label %41, label %116

41:                                               ; preds = %37
  %42 = load i8*, i8** %7, align 8
  %43 = call i32 @get_notword(i8* %42)
  store i32 %43, i32* %9, align 4
  %44 = load i32, i32* %9, align 4
  %45 = icmp slt i32 %44, 0
  br i1 %45, label %46, label %47

46:                                               ; preds = %41
  br label %116

47:                                               ; preds = %41
  %48 = load i32, i32* %9, align 4
  %49 = load i8*, i8** %7, align 8
  %50 = sext i32 %48 to i64
  %51 = getelementptr inbounds i8, i8* %49, i64 %50
  store i8* %51, i8** %7, align 8
  %52 = load i8*, i8** %7, align 8
  %53 = call i32 @get_word(i8* %52)
  store i32 %53, i32* %9, align 4
  %54 = load i32, i32* %9, align 4
  %55 = icmp ne i32 %54, 0
  br i1 %55, label %57, label %56

56:                                               ; preds = %47
  br label %37

57:                                               ; preds = %47
  %58 = load i32, i32* %9, align 4
  %59 = icmp sgt i32 %58, 0
  br i1 %59, label %60, label %63

60:                                               ; preds = %57
  %61 = load i32, i32* %9, align 4
  %62 = icmp slt i32 %61, 16383
  br label %63

63:                                               ; preds = %60, %57
  %64 = phi i1 [ false, %57 ], [ %62, %60 ]
  %65 = zext i1 %64 to i32
  %66 = call i32 @assert(i32 %65)
  %67 = load i8*, i8** %7, align 8
  %68 = load i32, i32* %9, align 4
  %69 = call i32 @my_lc_str(i8* getelementptr inbounds ([16384 x i8], [16384 x i8]* @spell_check.buff, i64 0, i64 0), i8* %67, i32 %68)
  %70 = load i32, i32* %9, align 4
  %71 = icmp sge i32 %70, 3
  br i1 %71, label %72, label %111

72:                                               ; preds = %63
  %73 = load i8*, i8** %7, align 8
  %74 = load i32, i32* %9, align 4
  %75 = call i32 @my_lc_str(i8* getelementptr inbounds ([16384 x i8], [16384 x i8]* @spell_check.buff, i64 0, i64 0), i8* %73, i32 %74)
  store i32 %75, i32* %10, align 4
  %76 = load i32, i32* %10, align 4
  %77 = call i32 @check_word(i8* getelementptr inbounds ([16384 x i8], [16384 x i8]* @spell_check.buff, i64 0, i64 0), i32 %76)
  store i32 %77, i32* %11, align 4
  %78 = load i32, i32* %11, align 4
  %79 = load i32, i32* %10, align 4
  %80 = call i32 (i32, i8*, ...) @vkprintf(i32 3, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0), i32 %78, i32 %79, i8* getelementptr inbounds ([16384 x i8], [16384 x i8]* @spell_check.buff, i64 0, i64 0))
  %81 = load i32, i32* %11, align 4
  %82 = icmp sge i32 %81, 0
  br i1 %82, label %83, label %105

83:                                               ; preds = %72
  %84 = load i32*, i32** @check_word_stat, align 8
  %85 = getelementptr inbounds i32, i32* %84, i64 1
  %86 = load i32, i32* %85, align 4
  %87 = add nsw i32 %86, 1
  store i32 %87, i32* %85, align 4
  %88 = load i32, i32* %11, align 4
  %89 = icmp ne i32 %88, 0
  br i1 %89, label %90, label %99

90:                                               ; preds = %83
  %91 = load i32*, i32** %5, align 8
  %92 = getelementptr inbounds i32, i32* %91, i64 0
  %93 = load i32, i32* %92, align 4
  %94 = add nsw i32 %93, 1
  store i32 %94, i32* %92, align 4
  %95 = load i32*, i32** @check_word_stat, align 8
  %96 = getelementptr inbounds i32, i32* %95, i64 0
  %97 = load i32, i32* %96, align 4
  %98 = add nsw i32 %97, 1
  store i32 %98, i32* %96, align 4
  br label %104

99:                                               ; preds = %83
  %100 = load i32*, i32** %5, align 8
  %101 = getelementptr inbounds i32, i32* %100, i64 1
  %102 = load i32, i32* %101, align 4
  %103 = add nsw i32 %102, 1
  store i32 %103, i32* %101, align 4
  br label %104

104:                                              ; preds = %99, %90
  br label %110

105:                                              ; preds = %72
  %106 = load i32*, i32** %5, align 8
  %107 = getelementptr inbounds i32, i32* %106, i64 2
  %108 = load i32, i32* %107, align 4
  %109 = add nsw i32 %108, 1
  store i32 %109, i32* %107, align 4
  br label %110

110:                                              ; preds = %105, %104
  br label %111

111:                                              ; preds = %110, %63
  %112 = load i32, i32* %9, align 4
  %113 = load i8*, i8** %7, align 8
  %114 = sext i32 %112 to i64
  %115 = getelementptr inbounds i8, i8* %113, i64 %114
  store i8* %115, i8** %7, align 8
  br label %37

116:                                              ; preds = %46, %37
  %117 = load i32, i32* %6, align 4
  %118 = icmp ne i32 %117, 0
  br i1 %118, label %122, label %119

119:                                              ; preds = %116
  %120 = load i32, i32* %8, align 4
  %121 = call i32 @dyn_release(i32 %120)
  br label %122

122:                                              ; preds = %119, %116
  ret i32 0
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @dyn_mark(i32) #1

declare dso_local i8* @zmalloc(i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @vkprintf(i32, i8*, ...) #1

declare dso_local i32 @filter_re(i8*, i32*) #1

declare dso_local i32 @get_notword(i8*) #1

declare dso_local i32 @get_word(i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @my_lc_str(i8*, i8*, i32) #1

declare dso_local i32 @check_word(i8*, i32) #1

declare dso_local i32 @dyn_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
